// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render without errors 1`] = `
<header>
  <div
    className="header-wrapper"
  >
    <form
      action="/search/\${query}"
      className="form-horizontal"
      onSubmit={[Function]}
    >
      <div
        className="logo"
      >
        netfixroulette
      </div>
      <SearchField
        onChange={[Function]}
        val="Search by name"
      />
      <div
        className="search-filter"
      >
        <div
          className="search-filter-box"
        >
          Search by
          <ul
            className="search-filter-list"
          >
            <li
              className="active"
              onClick={[Function]}
            >
              Title
            </li>
            <li
              className=""
              onClick={[Function]}
            >
              Genre
            </li>
          </ul>
        </div>
        <SearchButton />
      </div>
    </form>
  </div>
</header>
`;

exports[`Header should render without errors 2`] = `
<Connect(Header)
  dispatch={[MockFunction]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Header
    dispatch={[MockFunction]}
    fetchMovie={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    totalMovies={0}
  >
    <header>
      <div
        className="header-wrapper"
      >
        <form
          action="/search/\${query}"
          className="form-horizontal"
          onSubmit={[Function]}
        >
          <div
            className="logo"
          >
            netfixroulette
          </div>
          <SearchField
            onChange={[Function]}
            val="Search by name"
          >
            <div
              className="search-field-box"
            >
              <label
                className="search-field-label"
              >
                Find your movie
              </label>
              <input
                className="search-field-input"
                onChange={[Function]}
                placeholder="Hey"
              />
            </div>
          </SearchField>
          <div
            className="search-filter"
          >
            <div
              className="search-filter-box"
            >
              Search by
              <ul
                className="search-filter-list"
              >
                <li
                  className="active"
                  onClick={[Function]}
                >
                  Title
                </li>
                <li
                  className=""
                  onClick={[Function]}
                >
                  Genre
                </li>
              </ul>
            </div>
            <SearchButton>
              <div
                className="search-button"
              >
                <Button>
                  <button
                    style={
                      Object {
                        "background": "#F44336",
                        "border": "none",
                        "color": "white",
                        "padding": "10px",
                      }
                    }
                  >
                    search
                  </button>
                </Button>
              </div>
            </SearchButton>
          </div>
        </form>
      </div>
    </header>
  </Header>
</Connect(Header)>
`;
